# golly

./: GUI.py  README.md  gol.py  main.py  pyproject.toml  test.py  tk_gui.py
